--- a/Day1/Introduction to Python/3.Function_method_loop.ipynb
+++ b/Day1/Introduction to Python/3.Function_method_loop.ipynb
@@ -13,12 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Function"
+    "# Function\n",
+    "Functions are a convenient way to divide your code into useful blocks, allowing us to order our code, make it more readable, reuse it and save some time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +43,82 @@
    "source": [
     "a = tambah5(1)\n",
     "print (a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keyword arguments\n",
+    "Keyword arguments are related to the function calls. When you use keyword arguments in a function call, the caller identifies the arguments by the parameter name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printme( str ):\n",
+    "   \"This prints a passed string into this function\"\n",
+    "   print str\n",
+    "   return;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My string\n"
+     ]
+    }
+   ],
+   "source": [
+    "printme( str = \"My string\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Default arguments\n",
+    "A default argument is an argument that assumes a default value if a value is not provided in the function call for that argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printinfo( name, age = 35 ):\n",
+    "   \"This prints a passed info into this function\"\n",
+    "   print \"Name: \", name\n",
+    "   print \"Age \", age\n",
+    "   return;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  miki\n",
+      "Age  35\n"
+     ]
+    }
+   ],
+   "source": [
+    "printinfo( name=\"miki\" )"
    ]
   },
   {
