--- a/Day1/Introduction to Python/1. Variabel dan Tipe Data.ipynb
+++ b/Day1/Introduction to Python/1. Variabel dan Tipe Data.ipynb
@@ -11,64 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Hello World"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Hello World')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Variabel \n",
-    "### - Spesifik, *case sensitive* ,  dan dapat dipanggil melalui nama variabel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tinggi = 1.65\n",
-    "berat = 55"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "160"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tinggi"
+    "## 1. Variabel \n",
+    "\n",
+    "A Python variable can only begin with letter or underscore _. Numbers are only valid if they appear inside or at the end of the variable name. Other symbols are syntactically invalid anywhere in a variable name."
    ]
   },
   {
@@ -77,18 +22,163 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "55.5"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'int'>\n"
+     ]
     }
    ],
    "source": [
-    "berat"
+    "number_int = 123\n",
+    "print (type(number_var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_float = 123.0\n",
+    "print (type(number_float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_var = \"coba\"\n",
+    "print (type(string_var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 'cob')\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = len(string_var)\n",
+    "b = string_var[0:3]\n",
+    "print (a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(123456789L, <type 'long'>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_long = 123456789L\n",
+    "print (number_long, type(number_long))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_var = True\n",
+    "print (type(boolean_var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<type 'list'>, <type 'int'>, <type 'int'>)\n",
+      "[0, 1, 2, 3, 4, 'string']\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [ 0,1,2,3, 4, \"string\"]\n",
+    "print (type(myList), type(myList[0]), type(myList[3]))\n",
+    "print (myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "del myList[5]\n",
+    "print (myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "del myList[0:2]\n",
+    "print (myList)"
    ]
   },
   {
@@ -100,10 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tinggi = 1.78 # Meter\n",
@@ -112,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +209,7 @@
        "22.093170054286073"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +229,7 @@
        "22.093170054286073"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,10 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "bmi = berat / tinggi ** 2"
@@ -163,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +258,7 @@
        "22.093170054286073"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -199,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.71541950113379\n"
+      "17.7154195011\n"
      ]
     }
    ],
@@ -211,182 +297,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Tipe Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(bmi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "jumlah_hari = 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(jumlah_hari)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = 'BMI itu apa?'\n",
-    "y = 'Haha'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'> <class 'str'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(x), type(y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bool"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z = True\n",
-    "type(z)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
