--- a/Day1/Introduction to Python/2. List Python.ipynb
+++ b/Day1/Introduction to Python/2. List Python.ipynb
@@ -4,226 +4,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List Python"
+    "# List Python\n",
+    "The list is a most versatile datatype available in Python which can be written as a list of comma-separated values (items) between square brackets. Important thing about a list is that items in a list need not be of the same type."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tipe Data Python\n",
-    "- float - Bilangan real\n",
-    "- int - Bilangan Bulat\n",
-    "- str - string,text\n",
-    "- bool - True, False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tinggi = 1.73\n",
-    "apakah_tinggi = True # Hanya menyimpan satu nilai dalam variabel"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Permasalahan\n",
-    "- Data Science: Banyak data\n",
-    "- Misalkan ada beberapa data tinggi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tinggi_1 = 1.34\n",
-    "tinggi_2 = 1.69\n",
-    "tinggi_3 = 1.82\n",
-    "tinggi_4 = 1.99"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Sangat tidak efisien"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## List Python [a,b,c]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.73, 1.68, 1.71, 1.89]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[1.73, 1.68, 1.71, 1.89]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.73, 1.68, 1.71, 1.89]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keluarga = [1.73, 1.68, 1.71, 1.89]\n",
-    "keluarga"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Menyimpan koleksi dari sebuah nilai\n",
-    "- Menyimpan segala jenis tipe data\n",
-    "- Menyimpan tipe data yang berbeda dalam satu list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "keluarga = [\"kakak\", 1.73, \"adik\", 1.68, \"ibu\", 1.71, \"ayah\", 1.89]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['kakak', 1.73, 'adik', 1.68, 'ibu', 1.71, 'ayah', 1.89]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keluarga"
+    "### Create List"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "keluarga_2 = [[\"kakak\", 1.73], [\"adik\", 1.68], [\"ibu\", 1.71], [\"ayah\", 1.89]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['kakak', 1.73], ['adik', 1.68], ['ibu', 1.71], ['ayah', 1.89]]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(['physics', 'chemistry', 1997, 2000], [1, 2, 3, 4, 5], ['a', 'b', 'c', 'd'])\n"
+     ]
     }
    ],
    "source": [
-    "keluarga_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(keluarga)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(keluarga_2)"
+    "list1 = ['physics', 'chemistry', 1997, 2000];\n",
+    "list2 = [1, 2, 3, 4, 5 ];\n",
+    "list3 = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "\n",
+    "print (list1, list2, list3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Subsetting List"
+    "### Accessing Values in Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('list1[0]: ', 'physics')\n",
+      "('list2[1:5]: ', [2, 3, 4, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = list1[0]\n",
+    "b = list2[1:5]\n",
+    "print (\"list1[0]: \", a)\n",
+    "print (\"list2[1:5]: \", b)"
    ]
   },
   {
@@ -235,14 +73,6 @@
    "outputs": [],
    "source": [
     "keluarga = [\"kakak\", 1.73, \"adik\", 1.68, \"ibu\", 1.71, \"ayah\", 1.89]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Ingat index pada list berbasis 0\n",
-    "- Sehingga \"kakak\" memiliki index 0, \"1.73\" memiliki index 1 dan seterusnya "
    ]
   },
   {
@@ -263,26 +93,6 @@
    ],
    "source": [
     "keluarga[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.71"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keluarga[5]"
    ]
   },
   {
@@ -326,23 +136,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'kakak'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "keluarga_2[0][0]"
+    "### Updating Lists"
    ]
   },
   {
@@ -351,45 +148,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.73"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value available at index 2 : \n",
+      "1997\n",
+      "New value available at index 2 : \n",
+      "2001\n"
+     ]
     }
    ],
    "source": [
-    "keluarga_2[0][1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Slicing List"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['kakak', 1.73, 'adik', 1.68, 'ibu', 1.71, 'ayah', 1.89]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keluarga"
+    "list = ['physics', 'chemistry', 1997, 2000];\n",
+    "print (\"Value available at index 2 : \")\n",
+    "print (list[2])\n",
+    "list[2] = 2001;\n",
+    "print (\"New value available at index 2 : \")\n",
+    "print (list[2])"
    ]
   },
   {
