--- a/Day2/case_classification_template.ipynb
+++ b/Day2/case_classification_template.ipynb
@@ -124,14 +124,9 @@
     }
    ],
    "source": [
-    "# A. Import library \n",
-    "# ----------------------\n",
-    "\n",
-    "from sklearn.datasets import load_breast_cancer\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "print ('--libararies complate--')"
+    "#import library\n",
+    "#---------------------------------------------\n",
+    "\n"
    ]
   },
   {
@@ -268,11 +263,10 @@
     }
    ],
    "source": [
-    "# B. Load Dataset\n",
-    "# ----------------------\n",
-    "\n",
-    "dataset=load_breast_cancer()\n",
-    "print dataset.DESCR\n"
+    "# Load data \n",
+    "# showing data information\n",
+    "# ----------------------------\n",
+    "\n"
    ]
   },
   {
@@ -300,18 +294,12 @@
    },
    "outputs": [],
    "source": [
-    "# we use pandas as container the data\n",
-    "# ----------------------\n",
+    "# Use pandas as container the data\n",
+    "# showing head of data\n",
+    "# Set a global name X,y (for simple name)\n",
+    "#---------------------------------------------\n",
     "\n",
-    "# set to pandas\n",
-    "pd_dataset=pd.DataFrame(dataset.data)\n",
-    "pd_dataset.columns= dataset.feature_names\n",
-    "\n",
-    "# global name X,y for simple name\n",
-    "X= pd_dataset\n",
-    "y=dataset.target\n",
-    "\n",
-    "print pd_dataset.head()"
+    "\n"
    ]
   },
   {
@@ -322,20 +310,12 @@
    },
    "outputs": [],
    "source": [
-    "# summirize dataset using matplotlib\n",
-    "from matplotlib import pyplot as plt\n",
-    "color_dic = {0:'red', 1:'blue'}\n",
-    "#Plot histograms of CUT1 variables\n",
-    "data_mean=pd_dataset.iloc[:,0:10]\n",
+    "# Summirize dataset using matplotlib\n",
+    "# Plot histograms \n",
+    "#-------------------------------------\n",
     "\n",
-    "# colors = pd_dataset['class'].map(lambda x: color_dic.get(x))\n",
-    "colors= [color_dic.get(c) for c in y]\n",
     "\n",
-    "sm = pd.scatter_matrix(data_mean, c=colors, alpha=0.4, figsize=((15,15)));\n",
-    "\n",
-    "data_mean.plot(kind='box', subplots=True, layout=(4,3), sharex=False, sharey=False)\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
+    "\n"
    ]
   },
   {
@@ -380,12 +360,10 @@
    },
    "outputs": [],
    "source": [
-    "# Data pre-processing\n",
-    "# ----------------------\n",
-    "\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
-    "# data_scaler=StandardScaler()\n",
-    "# Xs=data_scaler.fit_transform(X)"
+    "# preprocessing code # \n",
+    "# Feature normalize using StandardScaler()\n",
+    "#---------------------------------------------\n",
+    "\n"
    ]
   },
   {
@@ -403,37 +381,8 @@
    },
    "outputs": [],
    "source": [
-    "# feature selection and feature reduction\n",
-    "# ----------------------\n",
-    "\n",
-    "# from sklearn.decomposition import PCA\n",
-    "# import numpy as np\n",
-    "# # feature extraction\n",
-    "# pca = PCA(n_components=10)\n",
-    "# X_reduc = pca.fit_transform(Xs)\n",
-    "\n",
-    "# # summarize components\n",
-    "# print(\"Explained Variance: %s\") % (sum(pca.explained_variance_ratio_))\n",
-    "\n",
-    "# #The amount of variance that each PC explains\n",
-    "# var= pca.explained_variance_ratio_\n",
-    "# #Cumulative Variance explains\n",
-    "# var1=np.cumsum(np.round(pca.explained_variance_ratio_, decimals=4)*100)              \n",
-    "# print(var1)\n",
-    "# X=X_reduc\n",
-    "\n",
-    "# # Deciding How Many Principal Components to Retain\n",
-    "# # - Kaiser’s criterion,Elbow\n",
-    "# # - screeplot\n",
-    "# plt.plot(pca.explained_variance_)\n",
-    "# plt.title('Scree Plot')\n",
-    "# plt.xlabel('Principal Component')\n",
-    "# plt.ylabel('Eigenvalue')\n",
-    "\n",
-    "# leg = plt.legend(['Eigenvalues from PCA'], loc='best', borderpad=0.3,shadow=False,markerscale=0.4)\n",
-    "# leg.get_frame().set_alpha(0.4)\n",
-    "# leg.draggable(state=True)\n",
-    "# plt.show()"
+    "# feature selection and feature reduction using PCA\n",
+    "#---------------------------------------------\n"
    ]
   },
   {
@@ -451,11 +400,12 @@
    },
    "outputs": [],
    "source": [
-    "print '----Data inputs---'\n",
-    "print X[:5]\n",
-    "print '\\n'\n",
-    "print '----Data targets---'\n",
-    "print  y[:5]"
+    "# Checking Data Representation\n",
+    "# showing structure of Input (X)\n",
+    "# showing structure of target (y)\n",
+    "#---------------------------------------------\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -514,25 +464,12 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "# -Initialization method classifier\n",
+    "# - Split data\n",
+    "#---------------------------------------------\n",
     "\n",
-    "# Split data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
     "\n",
-    "# initialization method classifier\n",
-    "classifier=[\n",
-    "        KNeighborsClassifier(5),\n",
-    "        DecisionTreeClassifier(),\n",
-    "        RandomForestClassifier(),        \n",
-    "        GaussianNB(),             \n",
-    "        SVC(probability=True, C=100)       \n",
-    "    \n",
-    "]"
+    "\n"
    ]
   },
   {
@@ -548,34 +485,12 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "from sklearn.model_selection import cross_val_score,KFold\n",
+    "# -Initialization method classifier\n",
+    "# - Split data\n",
+    "#---------------------------------------------\n",
     "\n",
-    "accuracy_all = []\n",
-    "cvs_all = []\n",
-    "stdv=[]\n",
-    "time_process=[]\n",
-    "names=[]\n",
     "\n",
-    "for clf in classifier:\n",
-    "    start = time.time()\n",
-    "    name= clf.__class__.__name__\n",
-    "    \n",
-    "    clf.fit(X_train, y_train)\n",
-    "    prediction = clf.predict(X_test)\n",
-    "    kfold = KFold(n_splits=10, random_state=42)\n",
-    "    scores = cross_val_score(clf, X, y, cv=kfold)\n",
-    "    predict_score=accuracy_score(prediction, y_test)\n",
-    "\n",
-    "    end = time.time()    \n",
-    "    \n",
-    "    time_process.append(\"{0:.5}\".format(end-start))\n",
-    "    accuracy_all.append(predict_score)\n",
-    "    cvs_all.append(np.mean(scores))\n",
-    "    stdv.append(\"+/- {1:.2%}\".format(np.mean(scores), np.std(scores)*2))\n",
-    "    names.append(name)\n",
-    "    \n"
+    "\n"
    ]
   },
   {
@@ -600,12 +515,10 @@
     }
    ],
    "source": [
-    "#create report to pandas\n",
-    "data={'accuracy': accuracy_all, 'cross val':cvs_all, 'stdv cross val': stdv, 'time process': time_process }\n",
-    "pd_data=pd.DataFrame(data)\n",
-    "pd_data.index=names\n",
+    "# Show evaluation to pandas\n",
+    "#---------------------------------------------\n",
     "\n",
-    "print pd_data\n"
+    "\n"
    ]
   },
   {
@@ -659,35 +572,11 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "print('--------- Now Trying Support Vector Machine Classifier ---------')\n",
-    "\n",
-    "#Tune Hyperparameters\n",
-    "\n",
-    "param_range = [0.0001, 0.01,,0.001 0.1,10,100]\n",
-    "param_grid = [{'C': param_range,\n",
-    "               'kernel': ['linear']},\n",
-    "              {'C': param_range,\n",
-    "               'gamma': param_range,\n",
-    "               'kernel': ['rbf']}]\n",
-    "clf = GridSearchCV(estimator= SVC(probability=True),\n",
-    "                  param_grid=param_grid,\n",
-    "                  scoring='accuracy',\n",
-    "                  cv=10,\n",
-    "                  n_jobs=1)\n",
-    "\n",
-    "clf.fit(X_train, y_train)\n",
-    "prediction =clf.predict(X_test)\n",
-    "\n",
-    "end = time.time()\n",
-    "\n",
-    "scores = cross_val_score(clf, X, y, cv=10)\n",
+    "# SVM tune parameters \n",
+    "#---------------------------------------------\n",
     "\n",
     "\n",
-    "print(\"Support Vector Machine Accuracy: {0:.2%}\".format(accuracy_score(prediction, y_test)))\n",
-    "print(\"Cross validation score: {0:.2%} (+/- {1:.2%})\".format(np.mean(scores), np.std(scores)*2))\n",
-    "print(\"Execution time: %s seconds \\n\" % \"{0:.5}\".format(end-start))\n",
-    "print(\"Best parameters: {0} \\n\".format(clf.best_params_))"
+    "\n"
    ]
   },
   {
@@ -719,22 +608,10 @@
     }
    ],
    "source": [
-    "print('--------- Now Trying Support Random Forest Classifier ---------')\n",
-    "start = time.time()\n",
+    "# Random Forest Classifier tune parameters\n",
+    "#--------------------------------------------\n",
     "\n",
-    "parameters = {'n_estimators':list(range(70,101)), 'criterion':['gini', 'entropy']}\n",
-    "\n",
-    "clf = GridSearchCV(RandomForestClassifier(), parameters, scoring = 'accuracy', n_jobs=4)\n",
-    "clf.fit(X_train, y_train)\n",
-    "prediction = clf.predict(X_test)\n",
-    "scores = cross_val_score(clf, X, y, cv=5)\n",
-    "\n",
-    "end = time.time()\n",
-    "\n",
-    "print(\"Random Forest Accuracy: {0:.2%}\".format(accuracy_score(prediction, y_test)))\n",
-    "print(\"Cross validation score: {0:.2%} (+/- {1:.2%})\".format(np.mean(scores), np.std(scores)*2))\n",
-    "print(\"Execution time: %s seconds \\n\" % \"{0:.5}\".format(end-start))\n",
-    "print(\"Best parameters: {0} \\n\".format(clf.best_params_))"
+    "\n"
    ]
   },
   {
@@ -765,22 +642,9 @@
     }
    ],
    "source": [
-    "print('--------- Now Trying Support Naive Bayes Classifier  ---------')\n",
-    "start = time.time()\n",
-    "\n",
-    "parameters = {'priors':[[0.01, 0.99],[0.1, 0.9], [0.2, 0.8], [0.25, 0.75], [0.3, 0.7],[0.35, 0.65], [0.4, 0.6]]}\n",
-    "\n",
-    "clf = GridSearchCV(GaussianNB(), parameters, scoring = 'accuracy', n_jobs=1)\n",
-    "clf.fit(X_train, y_train)\n",
-    "prediction = clf.predict(X_test)\n",
-    "scores = cross_val_score(clf, X, y, cv=5)\n",
-    "\n",
-    "end = time.time()\n",
-    "\n",
-    "print(\"Accuracy: {0:.2%}\".format(accuracy_score(prediction, y_test)))\n",
-    "print(\"Cross validation score: {0:.2%} (+/- {1:.2%})\".format(np.mean(scores), np.std(scores)*2))\n",
-    "print(\"Execution time: {0:.5} seconds \\n\".format(end-start))\n",
-    "print(\"Best parameters: {0}\".format(clf.best_params_))"
+    "# Naive Bayes Classifier tune parameters\n",
+    "#--------------------------------------------\n",
+    "\n"
    ]
   },
   {
@@ -788,6 +652,8 @@
    "metadata": {},
    "source": [
     "---------------------------\n",
+    "---------------------------\n",
+    "-------------------------\n",
     "### Example : Saving the best model"
    ]
   },
